guessing-micro-full/k8s/game-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: game-service
  template:
    metadata:
      labels:
        app: game-service
    spec:
      containers:
        - name: game-service
          image: europe-central2-docker.pkg.dev/flask-kube-joc/my-repo/game-service:v1
          ports:
            - containerPort: 8000
