guessing-micro-full/k8s/score-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: score-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: score-service
  template:
    metadata:
      labels:
        app: score-service
    spec:
      containers:
        - name: score-service
          image: europe-central2-docker.pkg.dev/flask-kube-joc/my-repo/score-service:v1
          ports:
            - containerPort: 8001
