guessing-micro-full/k8s/game-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: game-service
  template:
    metadata:
      labels:
        app: game-service
    spec:
      containers:
      - name: game
        image: europe-central2-docker.pkg.dev/flask-kube-joc/my-repo/game-service:v1
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: game-service
spec:
  selector:
    app: game-service
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
