guessing-micro-full/k8s/game-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-service
spec:
  selector:
    app: game-service
  ports:
    - port: 8000
      targetPort: 8000
