guessing-micro-full/k8s/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  selector:
    app: gateway
  ports:
    - port: 8000
      targetPort: 8000
