guessing-micro-full/k8s/score-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: score-service
spec:
  selector:
    app: score-service
  ports:
    - port: 8001
      targetPort: 8001
